summary of our work

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "de39dd92",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "        print(f\"Accuracy for event Ia = {acc1:.4f} \\t({acc_1}/{int((np.mean(y_test == 1)*len(y_test)))})\")\n",
     "        print(f\"Accuracy for event Ib = {acc2:.4f} \\t({acc_2}/{int((np.mean(y_test == 2)*len(y_test)))})\")\n",
     "        print(f\"Accuracy for event II = {acc3:.4f} \\t({acc_3}/{int((np.mean(y_test == 3)*len(y_test)))})\")\n",
-    "        print(f\"Accuracy overall = {acc:.4f}\")\n",
+    "        print(f\"Accuracy multi-class = {acc:.4f}\")\n",
     "\n",
     "    # calculate binary accuracy\n",
     "    for i, y in enumerate(y_pred):\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "c68b6627",
    "metadata": {},
    "outputs": [
@@ -204,18 +204,9 @@
       "Accuracy for event Ia = 0.1458 \t(7/48)\n",
       "Accuracy for event Ib = 0.5000 \t(84/168)\n",
       "Accuracy for event II = 0.6042 \t(145/240)\n",
-      "Accuracy overall = 0.7368\n"
+      "Accuracy multi-class = 0.7368\n",
+      "Accuracy binary = 0.9016\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.7367875647668394, 0.9015544041450777)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -228,7 +219,49 @@
     "clf = SVC(kernel='rbf', C=3.75, tol=1e-8)\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)\n",
-    "report_accuracies(y_pred, y_test)"
+    "multi, binary = report_accuracies(y_pred, y_test)\n",
+    "print(f\"Accuracy binary = {binary:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba4dbfb3",
+   "metadata": {},
+   "source": [
+    "### Performance on hidden test using high $C$ value (completely overfitting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "19392abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for nonevent = 0.9136 \t(465/509)\n",
+      "Accuracy for event Ia = 0.5625 \t(27/48)\n",
+      "Accuracy for event Ib = 0.6071 \t(102/168)\n",
+      "Accuracy for event II = 0.6083 \t(146/240)\n",
+      "Accuracy multi-class = 0.7668\n",
+      "Accuracy binary = 0.9109\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = read_data()\n",
+    "test_data = read_data(path=\"data/npf_test.csv\")\n",
+    "\n",
+    "X_train, y_train = train_data.drop(columns=\"class4\").values, data.class4.values\n",
+    "X_test, y_test = test_data.drop(columns=\"class4\").values, test_data.class4.values\n",
+    "\n",
+    "clf = SVC(kernel='rbf', C=1000, tol=1e-8)\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "multi, binary = report_accuracies(y_pred, y_test)\n",
+    "print(f\"Accuracy binary = {binary:.4f}\")"
    ]
   },
   {
